--- a/Firefox/styles.css
+++ b/Firefox/styles.css
@@ -127,6 +127,24 @@ ytd-guide-entry-renderer[is-header] .title.ytd-guide-entry-renderer {
 ytd-guide-entry-renderer[is-header] .title.ytd-guide-entry-renderer + [icon="chevron_right"] {
     display: none !important;
 }
+
+.ytd-guide-entry-renderer:hover {
+	background: #444444;
+}
+ytd-guide-entry-renderer[active] .ytd-guide-entry-renderer:hover {
+	background: #ff0000 !important;
+}
+
+#header-entry .ytd-guide-entry-renderer:hover {
+	background: none !important;
+}
+
+.ytd-guide-entry-renderer:hover > .title {
+	color: #ffffff !important;
+}
+.ytd-guide-entry-renderer:hover > .guide-icon.ytd-guide-entry-renderer {
+	color: #ffffff !important;
+}
 .guide-icon.ytd-guide-entry-renderer {
     --iron-icon-height: 20px !important;
     --iron-icon-width: 20px !important;
