--- a/Firefox/styles.css
+++ b/Firefox/styles.css
@@ -128,7 +128,10 @@ ytd-guide-entry-renderer[is-header] .title.ytd-guide-entry-renderer + [icon="che
     display: none !important;
 }
 
-.ytd-guide-entry-renderer:hover {
+ytd-guide-entry-renderer {
+	width: 100% !important;
+}
+.ytd-guide-entry-renderer:not(.guide-icon):hover {
 	background: #444444;
 }
 ytd-guide-entry-renderer[active] .ytd-guide-entry-renderer:hover {
@@ -145,12 +148,19 @@ ytd-guide-entry-renderer[active] .ytd-guide-entry-renderer:hover {
 .ytd-guide-entry-renderer:hover > .guide-icon.ytd-guide-entry-renderer {
 	color: #ffffff !important;
 }
+.ytd-guide-entry-renderer:hover > .guide-icon.ytd-guide-entry-renderer svg {
+	fill: #ffffff !important;
+}
 .guide-icon.ytd-guide-entry-renderer {
     --iron-icon-height: 20px !important;
     --iron-icon-width: 20px !important;
     margin-right: 15px !important;
     color:#878787 !important;
 }
+#endpoint[href="/playlist?list=WL"]:hover yt-icon:first-of-type, #endpoint[href="/playlist?list=LL"]:hover yt-icon:first-of-type {
+  filter: invert(1) brightness(100) !important;
+}
+
 yt-img-shadow.ytd-guide-entry-renderer {
     margin-right: 15px !important;
 }
