Partially revert Reddit-style comments

--- a/Chrome/styles.css
+++ b/Chrome/styles.css
@@ -473,11 +473,6 @@ html:not([dark]) #author-text {
 html:not([dark]) ytd-author-comment-badge-renderer {
     --ytd-author-comment-badge-name-color: #128ee9 !important;
 }
-html:not([dark]) .more-button.ytd-comment-replies-renderer, 
-html:not([dark]) .less-button.ytd-comment-replies-renderer,
-html:not([dark]) ytd-comment-replies-renderer #expander button {
-    color: #2793e6 !important;
-}
 span.yt-view-count-renderer, span.ytd-video-view-count-renderer {
     font-size:18px !important;
 }
@@ -798,6 +793,9 @@ yt-img-shadow.ytd-channel-list-sub-menu-avatar-renderer {
     opacity: 0.75 !important;
     padding: 0 4px !important;
 }
+.yt-lockup-metadata-view-model__metadata {
+    color: #767676 !important;
+}
 
 /*ADDITIONAL*/
 [page-subtype="home"] #contents > ytd-rich-grid-row,
@@ -832,4 +830,19 @@ ytd-multi-page-menu-renderer {
 #ticket-shelf,
 #primary-inner #expandable-metadata {
     background-color: var(--redux-spec-base-background) !important;
+}
+
+/* COMMENT STYLES */
+html:not([dark]) .more-button.ytd-comment-replies-renderer, 
+html:not([dark]) .less-button.ytd-comment-replies-renderer,
+html:not([dark]) ytd-comment-replies-renderer #expander button,
+html:not([dark]) #more-replies-sub-thread .yt-spec-button-shape-next--mono.yt-spec-button-shape-next--text,
+html:not([dark]) #less-replies-sub-thread .yt-spec-button-shape-next--mono.yt-spec-button-shape-next--text {
+    color: #2793e6 !important;
+}
+.threadline {
+    display: none !important;
+}
+.ytSubThreadThreadline {
+    opacity: 0 !important;
 }
